# Laba10

./: .travis.yml  CMakeLists.txt  README.md
Polynomial/: Polynomial_main.cpp
PolynomialLib/: Monom.cpp  Monom.h  Polynomial.cpp  Polynomial.h
PolynomialTest/: PolynomialTest.cpp
